# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  render.sh
include/: camera.h  color.h  hittable.h  ray_trace.h  vec3.h
include/contact/: hittable.h  hittable_list.h
include/models/: camera.h  materials.h  sphere.h
include/utils/: color.h  interval.h  ray.h  vec3.h
src/: camera.cpp  hittable_list.cpp  interval.cpp  main.cpp  materials.cpp  ray.cpp  sphere.cpp  vec3.cpp
